Corrected wrapping issue as per Trac #854
git-svn-id: https://svn.socialplanning.org/svn/opencore/trunk@7615 40f73b84-6177-4a8e-8c61-7eee4b1974ed

--- a/opencore/nui/css/opencore.css
+++ b/opencore/nui/css/opencore.css
@@ -680,7 +680,7 @@ a.wickedadd {
   display: block;
 }
 .oc-listen-message pre.oc-listen-message-body {
-  white-space: normal;
+  /* white-space: normal; */
 }
 .oc-listen-message-child {
   border-top: 1px solid #ccc;
